fix(footer) not showing in safari

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -31,7 +31,6 @@
 }
 
 .main {
-	overflow: hidden;
 	background: @white;
 }
 
